# comet-native

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: deploy.yml  release.yml
apps/comet/: Cargo.toml
apps/comet/src/: auth_cli.rs  daemon.rs  main.rs
apps/ios/: README.md
apps/ios/Comet/: Info.plist
apps/ios/Comet.xcodeproj/: project.pbxproj
apps/ios/Comet.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
apps/ios/Comet.xcodeproj/xcshareddata/xcschemes/: Comet.xcscheme
apps/ios/Comet/App/: AppConfig.swift  AppModel.swift  CometApp.swift  DemoDataset.swift  E2ERunner.swift
apps/ios/Comet/Assets.xcassets/AccentColor.colorset/: Contents.json
apps/ios/Comet/Assets.xcassets/LaunchBackground.colorset/: Contents.json
apps/ios/Comet/Auth/: AuthClient.swift
apps/ios/Comet/Composer/: ComposerView.swift
apps/ios/Comet/Markdown/: Highlight.swift  InlineCodeRenderer.swift  MarkdownBlockView.swift  MarkdownModel.swift
apps/ios/Comet/Models/: Entities.swift  HarnessCatalog.swift
apps/ios/Comet/Sync/: DeviceRelayClient.swift  DocDisk.swift  LoroProtocol.swift  LoroValueJSON.swift  RoomClient.swift  SessionStore.swift  WorkspaceStore.swift
apps/ios/Comet/Theme/: BrandMarks.swift  LineIcons.swift  Motion.swift  Theme.swift
apps/ios/Comet/Transcript/: TranscriptRows.swift  TranscriptView.swift  Veil.swift
apps/ios/Comet/Views/: HomeView.swift  Loaders.swift  NewSessionView.swift  SessionView.swift  SheetUI.swift  SignInView.swift  SpaceView.swift
crates/doc/: Cargo.toml
crates/doc/examples/: gen_fixture.rs
crates/doc/src/: commands.rs  constants.rs  lib.rs  parts.rs  schema.rs  workspace.rs
crates/doc/tests/: attachments_roundtrip.rs
crates/engine/: Cargo.toml
crates/engine/src/: agent_accounts.rs  auth.rs  diff_sync.rs  doc_host.rs  instance_lock.rs  lib.rs  registry.rs  repos.rs  rpc.rs  run_journal.rs  sessions.rs  spaces.rs  terminals.rs  titles.rs  uploads.rs  workspace_host.rs
crates/engine/tests/: auth.rs  device_routing.rs  e2e.rs  m5_repos_diffs_terminals.rs  m5c_accounts_uploads_titles.rs  restart_resume.rs  workspace_sync.rs
crates/harness/: Cargo.toml
crates/harness/src/: lib.rs  mock.rs
crates/harness/src/claude/: catalog.rs  mod.rs  normalize.rs  wire.rs
crates/harness/src/codex/: catalog.rs  mod.rs  normalize.rs  rpc.rs
crates/harness/tests/: claude.rs  codex.rs
crates/harness/tests/fixtures/: fake-claude.sh  fake-codex.sh
crates/proto/: Cargo.toml
crates/proto/src/: agent.rs  entities.rs  lib.rs
crates/rpc/: Cargo.toml
crates/rpc/examples/: e2e_driver.rs  rpc_probe.rs
crates/rpc/src/: client.rs  device_room.rs  lib.rs  server.rs
crates/rpc/tests/: device_room.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs  room.rs  store.rs  wake.rs
crates/sync/src/room/: tests.rs
crates/sync/tests/: edge_convergence.rs
crates/ui/: Cargo.toml
crates/ui/src/: app_menus.rs  attachments.rs  changes.rs  composer.rs  icons.rs  lib.rs  loaders.rs  motion.rs  pickers.rs  popover.rs  rail.rs  settings.rs  shell.rs  sound.rs  state.rs  theme.rs  transcript.rs
crates/ui/src/markdown/: highlight.rs  mod.rs  parser.rs  render.rs  selection.rs  veil.rs
crates/ui/src/settings/: accounts.rs  archived.rs  composer.rs  devices.rs  shortcuts.rs  widgets.rs
crates/ui/src/shell/: spaces.rs  tabs.rs
crates/ui/src/terminal/: emulator.rs  mod.rs  panel.rs  view.rs
docs/: PARITY.md
docs/research/: durable-objects-language.md  feature-inventory.md  gpui.md  harness.md  loro-rust.md  mugen-pretext.md
edge/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
edge/scripts/: compat-check.mjs  device-frame.mjs  smoke.mjs
edge/src/: auth-routes.ts  auth.ts  blobs.ts  device-frame.test.ts  device-host-liveness.test.ts  device-room.ts  env.ts  index.ts  install.sh  modules.d.ts  session-room.ts  workos.ts
edge/src/session-doc/: constants.ts  control-types.ts  index.ts  messages.ts  render-parts.ts  sidecar.ts  tail.ts
scripts/: dev-demo.sh  e2e-smoke.sh  package-linux.sh  package-macos.sh
