[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/doc",
    "crates/sync",
    "crates/harness",
    "crates/engine",
    "crates/rpc",
    "crates/ui",
    "apps/comet",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
comet-proto = { path = "crates/proto" }
comet-doc = { path = "crates/doc" }
comet-sync = { path = "crates/sync" }
comet-harness = { path = "crates/harness" }
comet-engine = { path = "crates/engine" }
comet-rpc = { path = "crates/rpc" }
comet-ui = { path = "crates/ui" }

# CRDT
loro = "1.13"
# Wire protocol for the SessionRoom DO rooms — official Rust twin of the npm
# `loro-protocol` package the TS edge speaks (same monorepo, byte-identical
# frames, cross-checked by its js_snapshots tests).
loro-protocol = "0.3"

# gpui — the wingleeio/zed fork: upstream f14fea9 + one commit
# (`comet/line-wrap-closing-punctuation`, a6bf17c) fixing BOTH wrap-rule copies
# (LineWrapper + line_layout's shaped-text duplicate) so
# Rebase that branch when bumping the upstream rev.
gpui = { git = "https://github.com/wingleeio/zed", rev = "a6bf17cf028612a6eea80c32645a3305bd7cded4" }
gpui_platform = { git = "https://github.com/wingleeio/zed", rev = "a6bf17cf028612a6eea80c32645a3305bd7cded4", features = [
    "wayland",
    "x11",
    "font-kit",
] }
gpui_tokio = { git = "https://github.com/wingleeio/zed", rev = "a6bf17cf028612a6eea80c32645a3305bd7cded4" }

# async / net
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
libc = "0.2"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
async-trait = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# storage
rusqlite = { version = "0.32", features = ["bundled"] }

# misc
anyhow = "1"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
notify = "7"
portable-pty = "0.8"
alacritty_terminal = "0.26"
pulldown-cmark = "0.12"
unicode-segmentation = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

[profile.release]
# Distribution profile (scripts/package-linux.sh): thin LTO buys most of fat
# LTO's size/speed win at a fraction of the link time; strip debug symbols.
lto = "thin"
strip = "symbols"

[profile.dev]
# gpui is slow unoptimized; match zed's approach for deps
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
