[package]
name = "comet-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
comet-proto.workspace = true
comet-doc.workspace = true
comet-sync.workspace = true
comet-harness.workspace = true
comet-rpc.workspace = true
loro.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
notify.workspace = true
portable-pty.workspace = true
base64 = "0.22"
libc.workspace = true
sha2.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-tungstenite.workspace = true
