[package]
name = "comet-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
comet-proto.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
