[package]
name = "comet-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
loro.workspace = true
loro-protocol.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
comet-doc.workspace = true
tempfile.workspace = true
