[package]
name = "comet-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
comet-proto.workspace = true
comet-rpc.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
anyhow.workspace = true
tracing.workspace = true
